fix table icon not showing

--- a/packages/opub-ui/src/components/Table/Table.module.scss
+++ b/packages/opub-ui/src/components/Table/Table.module.scss
@@ -6,11 +6,9 @@
   max-width: 100vw;
   background-color: var(--surface);
   border-radius: var(--border-radius-2);
-  // overflow: hidden;
 }
 
 .ScrollContainer {
-  // overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   scroll-behavior: smooth;
   background-color: inherit;
@@ -155,6 +153,10 @@
 
     .Icon {
       opacity: 1;
+
+      svg {
+        fill: var(--icon-disabled);
+      }
     }
   }
 
